fix: align style of the analysis section

--- a/app/assets/stylesheets/sample.scss
+++ b/app/assets/stylesheets/sample.scss
@@ -221,6 +221,7 @@
 
       .sub-title {
         font-size: 14px;
+        font-weight: normal;
         margin-left: 10px;
         margin-top: 3px;
       }
@@ -228,6 +229,7 @@
       .desc {
         // font-size: 12px;
         // display: inline-flex;
+        font-weight: normal;
         margin-left: 10px;
         margin-right: 0px;
         // overflow: hidden;
